webapp/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: webapp
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
        tier: frontend
        track: stable
    spec:
      containers:
        - name: webapp-frontend
          image: europe-west8-docker.pkg.dev/acquired-voice-363315/hello-repo/webapp-sample-frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
